--- a/frontend/src/components/sass/utilities/_text.scss
+++ b/frontend/src/components/sass/utilities/_text.scss
@@ -42,3 +42,7 @@
 .underline {
   text-decoration: underline;
 }
+
+.text-balance {
+  text-wrap: balance;
+}
